--- a/clean_preprocess.ipynb
+++ b/clean_preprocess.ipynb
@@ -76,22 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'to_scv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_0/9_g22rvs1c3d7sy3mlzk7mtm0000gn/T/ipykernel_2315/1987104940.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0msocial_vulnerability\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_scv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"clean_data/non_energy/social_vulnerability.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0msocial_vulnerability\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5476\u001b[0m         ):\n\u001b[1;32m   5477\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5478\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5479\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5480\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_scv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Read in social vulnerability\n",
     "social_vulnerability = pd.read_csv(\"data/social_vulnerability/SVI2018_US.csv\", dtype = {\"FIPS\": str, \"F_TOTAL\": float})\n",
@@ -304,84 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>res_rate_percent_commercial_industrial</th>\n",
-       "      <th>STATEFP</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>District of Columbia</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Montana</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Washington</td>\n",
-       "      <td>105.0</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>North Dakota</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  STATE  res_rate_percent_commercial_industrial STATEFP\n",
-       "0               Alabama                                    97.0      01\n",
-       "1  District of Columbia                                    99.0      11\n",
-       "2               Montana                                   105.0      30\n",
-       "3            Washington                                   105.0      53\n",
-       "4          North Dakota                                   106.0      38"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "res_percent = pd.read_csv(\"data/energy/Residential cost per kWh as % of commercial + industrial rates.csv\")\n",
     "# Keep relevant columns and rows\n",
@@ -445,11 +357,336 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Combine all variables into one output file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATEFP</th>\n",
+       "      <th>COUNTYFP</th>\n",
+       "      <th>TRACTCE</th>\n",
+       "      <th>GEOID</th>\n",
+       "      <th>energy_burden</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>gas_savings_percent</th>\n",
+       "      <th>gas_spending_usd</th>\n",
+       "      <th>electric_savings_percent</th>\n",
+       "      <th>electric_spending_percent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pop_16_older</th>\n",
+       "      <th>less_than_hs</th>\n",
+       "      <th>insured</th>\n",
+       "      <th>senior_living_alone</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>occupied_housing_units</th>\n",
+       "      <th>owner_occupied</th>\n",
+       "      <th>renter_occupied</th>\n",
+       "      <th>disabled</th>\n",
+       "      <th>pop_16_plus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>51</td>\n",
+       "      <td>800</td>\n",
+       "      <td>075703</td>\n",
+       "      <td>51800075703</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1153.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1496.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>37762.0</td>\n",
+       "      <td>540.0</td>\n",
+       "      <td>464.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>9766.0</td>\n",
+       "      <td>38939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51</td>\n",
+       "      <td>800</td>\n",
+       "      <td>075803</td>\n",
+       "      <td>51800075803</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1325.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>43819.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>486.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>-666666666.0</td>\n",
+       "      <td>46290.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51</td>\n",
+       "      <td>800</td>\n",
+       "      <td>075701</td>\n",
+       "      <td>51800075701</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1434.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1735.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>35379.0</td>\n",
+       "      <td>840.0</td>\n",
+       "      <td>459.0</td>\n",
+       "      <td>381.0</td>\n",
+       "      <td>25000.0</td>\n",
+       "      <td>33233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>51</td>\n",
+       "      <td>800</td>\n",
+       "      <td>075802</td>\n",
+       "      <td>51800075802</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1777.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>1926.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>29855.0</td>\n",
+       "      <td>869.0</td>\n",
+       "      <td>751.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>38633.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>51</td>\n",
+       "      <td>800</td>\n",
+       "      <td>075404</td>\n",
+       "      <td>51800075404</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>953.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>913.0</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>58824.0</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>432.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47500.0</td>\n",
+       "      <td>55185.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  STATEFP COUNTYFP TRACTCE        GEOID  energy_burden     STATE  \\\n",
+       "0      51      800  075703  51800075703         -999.0  Virginia   \n",
+       "1      51      800  075803  51800075803         -999.0  Virginia   \n",
+       "2      51      800  075701  51800075701         -999.0  Virginia   \n",
+       "3      51      800  075802  51800075802         -999.0  Virginia   \n",
+       "4      51      800  075404  51800075404         -999.0  Virginia   \n",
+       "\n",
+       "   gas_savings_percent  gas_spending_usd  electric_savings_percent  \\\n",
+       "0                  0.0               0.0                      0.12   \n",
+       "1                  0.0               0.0                      0.12   \n",
+       "2                  0.0               0.0                      0.12   \n",
+       "3                  0.0               0.0                      0.12   \n",
+       "4                  0.0               0.0                      0.12   \n",
+       "\n",
+       "   electric_spending_percent  ...  pop_16_older  less_than_hs  insured  \\\n",
+       "0                       0.35  ...        1153.0          70.0   1496.0   \n",
+       "1                       0.35  ...        1100.0          64.0   1325.0   \n",
+       "2                       0.35  ...        1434.0          48.0   1735.0   \n",
+       "3                       0.35  ...        1777.0          59.0   1926.0   \n",
+       "4                       0.35  ...         953.0          10.0    913.0   \n",
+       "\n",
+       "   senior_living_alone  median_income occupied_housing_units  owner_occupied  \\\n",
+       "0                 12.0        37762.0                  540.0           464.0   \n",
+       "1                 10.0        43819.0                  558.0           486.0   \n",
+       "2                 12.0        35379.0                  840.0           459.0   \n",
+       "3                 19.0        29855.0                  869.0           751.0   \n",
+       "4                  9.4        58824.0                  479.0           432.0   \n",
+       "\n",
+       "   renter_occupied     disabled  pop_16_plus  \n",
+       "0             76.0       9766.0      38939.0  \n",
+       "1             72.0 -666666666.0      46290.0  \n",
+       "2            381.0      25000.0      33233.0  \n",
+       "3            118.0      20000.0      38633.0  \n",
+       "4             47.0      47500.0      55185.0  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use census tract metadata file as base dataframe for joins\n",
+    "eep = pd.read_csv(\"data/geography/tract_metadata.csv\", dtype = {\n",
+    "   \"STATEFP\": str,\n",
+    "   \"COUNTYFP\": str,\n",
+    "   \"TRACTCE\": str,\n",
+    "   \"GEOID\": str\n",
+    "})\n",
+    "\n",
+    "# Tables containing variables that will be joined\n",
+    "energy_burden = pd.read_csv(\"clean_data/energy/energy_burden.csv\", dtype = {\n",
+    "   \"GEOID\": str,\n",
+    "   \"energy_burden\": float\n",
+    "})\n",
+    "aceee = pd.read_csv(\"clean_data/energy/aceee.csv\", dtype = {\n",
+    "   \"STATE\": str,\n",
+    "   \"gas_savings_percent\": float,\n",
+    "   \"gas_spending_usd\": float,\n",
+    "   \"electric_savings_percent\": float,\n",
+    "   \"electric_spending_percent\": float,\n",
+    "   \"STATEFP\": str\n",
+    "})\n",
+    "res_percent = pd.read_csv(\"clean_data/energy/res_rate_percent_commercial_industrial.csv\", dtype = {\n",
+    "   \"STATE\": str,\n",
+    "   \"res_rate_percent_commercial_industrial\": float,\n",
+    "   \"STATEFP\": str\n",
+    "})\n",
+    "res_percent = res_percent[[\"STATEFP\", \"res_rate_percent_commercial_industrial\"]]\n",
+    "solar_installers = pd.read_csv(\"clean_data/energy/median_income_solar_installer.csv\", dtype = {\n",
+    "   \"GEOID\": str,\n",
+    "   \"num_solar_installers\": int,\n",
+    "   \"median_income_solar\": float\n",
+    "})\n",
+    "shutoff_scores = pd.read_csv(\"clean_data/energy/shutoff_scores.csv\", dtype = {\n",
+    "   \"STATE\": str,\n",
+    "   \"shutoff_score\": float,\n",
+    "   \"STATEFP\": str\n",
+    "})\n",
+    "shutoff_scores = shutoff_scores[[\"STATEFP\", \"shutoff_score\"]]\n",
+    "climate_vulnerability = pd.read_csv(\"clean_data/non_energy/climate_vulnerability.csv\", dtype = {\n",
+    "   \"GEOID\": str,\n",
+    "   \"climate_score\": float,\n",
+    "   \"climate_rating\": str\n",
+    "})\n",
+    "social_vulnerability = pd.read_csv(\"clean_data/non_energy/social_vulnerability.csv\", dtype = {\n",
+    "   \"GEOID\": str,\n",
+    "   \"svi\": float\n",
+    "})\n",
+    "acs = pd.read_csv(\"data/acs/acs_data.csv\", dtype = {\n",
+    "   \"NAME\": str,\n",
+    "   \"total_pop\": int,\n",
+    "   \"state\": str,\n",
+    "   \"county\": str,\n",
+    "   \"tract\": str,\n",
+    "   \"GEOID\": str,\n",
+    "   \"white_no_hispanic\": float,\n",
+    "   \"year_built\": int,\n",
+    "   \"internet_access\": float,\n",
+    "   \"total_households\": int,\n",
+    "   \"labor_force_rate\": float,\n",
+    "   \"pop_16_older\": float,\n",
+    "   \"less_than_hs\": float,\n",
+    "   \"insured\": float,\n",
+    "   \"senior_living_alone\": float,\n",
+    "   \"median_income\": float,\n",
+    "   \"occupied_housing_units\": float,\n",
+    "   \"owner_occupied\": float,\n",
+    "   \"renter_occupied\": float,\n",
+    "   \"disabled\": float,\n",
+    "   \"pop_16_plus\": float\n",
+    "})\n",
+    "acs = acs[[\n",
+    "   \"GEOID\",\n",
+    "   \"total_pop\",\n",
+    "   \"white_no_hispanic\",\n",
+    "   \"year_built\",\n",
+    "   \"internet_access\",\n",
+    "   \"total_households\",\n",
+    "   \"labor_force_rate\",\n",
+    "   \"pop_16_older\",\n",
+    "   \"less_than_hs\",\n",
+    "   \"insured\",\n",
+    "   \"senior_living_alone\",\n",
+    "   \"median_income\",\n",
+    "   \"occupied_housing_units\",\n",
+    "   \"owner_occupied\",\n",
+    "   \"renter_occupied\",\n",
+    "   \"disabled\",\n",
+    "   \"pop_16_plus\"\n",
+    "]]\n",
+    "\n",
+    "# Join variables to the data\n",
+    "eep = pd.merge(eep, energy_burden, how = \"left\", on = \"GEOID\").fillna(-999)\n",
+    "eep = pd.merge(eep, aceee, how = \"left\", on = \"STATEFP\").fillna(-999)\n",
+    "eep = pd.merge(eep, res_percent, how = \"left\", on = \"STATEFP\").fillna(-999)\n",
+    "eep = pd.merge(eep, solar_installers, how = \"left\", on = \"GEOID\").fillna(-999)\n",
+    "eep = pd.merge(eep, shutoff_scores, how = \"left\", on = \"STATEFP\").fillna(-999)\n",
+    "eep = pd.merge(eep, climate_vulnerability, how = \"left\", on = \"GEOID\").fillna(-999)\n",
+    "eep = pd.merge(eep, social_vulnerability, how = \"left\", on = \"GEOID\").fillna(-999)\n",
+    "eep = pd.merge(eep, acs, how = \"left\", on = \"GEOID\").fillna(-999)\n",
+    "\n",
+    "# Write overall EEP file out\n",
+    "eep.to_csv(\"clean_data/eep.csv\", index = False)\n",
+    "eep.head()"
+   ]
   }
  ],
  "metadata": {
